--- a/style_ht.css
+++ b/style_ht.css
@@ -1,5 +1,11 @@
 
 
+body {background-image: url(img/patt.png);
+}
+
+.header {padding: 25px 0;
+	background: rgba(255,255,255,0.75);
+}
 
 
 .container { width: 1170px;
