add style for menu li a (display,height,line-height,text-decoration,color,font-size)

--- a/style_ht.css
+++ b/style_ht.css
@@ -35,7 +35,14 @@ clear: both;
 	width: 25%;
 }
 
-
+.menu li a {
+	display: block;
+	height: 50px;
+	line-height: 50px;
+	text-decoration: none;
+	color: #2c71b8;
+	font-size: 21px;
+}
 
 
 /*.form {
