--- a/style.css
+++ b/style.css
@@ -93,9 +93,11 @@ ul.menu > li:hover > ul.submenu {
 
 .form  {
 	height: 40px;
-	width: 90%;
 	border: 1px solid #2c71b8;
+	width: 200px;
+	position: relative;
 }
+
 
 
 .glass  {
@@ -106,19 +108,35 @@ ul.menu > li:hover > ul.submenu {
 	line-height: 30px;
 }
 
+.glass_img {
+
+	background-image: url(img/glass.png);
+	background-repeat: no-repeat;
+}
+
+
 .basket {
 width: 40px;
 	height: 40px;
-	background-image: url(img/basket.png);
 	background: white;
-	/*text-align: center;
-	line-height: 40px;
-*/}
+	}
 
 .basket_img {
 
 	background-image: url(img/basket.png);
 	background-repeat: no-repeat;
+}
+
+.round {
+	width: 20px;
+	height: 20px;
+	color: white;
+	background: #2c71b8;
+	border-radius:20px;
+	text-align: center;
+	position:absolute; 
+	top: -10px;
+	left: 0;
 }
 
 
